paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_005/target.compile.log
warning: value assigned to `col` is never read
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_005/target.rs:52:5
   |
52 |     col = Hue::Winedark;
   |     ^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0506]: cannot assign to `col` because it is borrowed
  --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/declarations/enum_specifiers/sample_005/target.rs:52:5
   |
39 |     let cp = &col;
   |              ---- `col` is borrowed here
...
52 |     col = Hue::Winedark;
   |     ^^^^^^^^^^^^^^^^^^^ `col` is assigned to here but it was already borrowed
53 |     if check_vals(*cp) != 13 {
   |                   --- borrow later used here

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0506`.